Bug 1567505 [Wayland] Implement uri-list drop target on Wayland, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D80491